--- a/Resources/translations/admin/avito-promotion.admin.ru.yaml
+++ b/Resources/translations/admin/avito-promotion.admin.ru.yaml
@@ -1,26 +1,27 @@
 page:
   index: 'Настройки услуг продвижения для Avito'
-  new: 'Добавить услуги продвижения для Avito'
-  edit: 'Редактировать услуги продвижения для Avito'
-  delete: 'Удалить услуги продвижения для Avito'
+  new: 'Добавить рекламную компанию для Avito'
+  edit: 'Редактировать рекламную компанию для Avito'
+  delete: 'Удалить рекламную компанию для Avito'
 
 breadcrumb:
   index: 'Настройки услуг продвижения для Avito'
-  new: 'Добавить услуги продвижения для Avito'
-  edit: 'Редактировать услуги продвижения для Avito'
-  delete: 'Удалить услуги продвижения для Avito'
+  new: 'Добавить рекламную компанию для Avito'
+  edit: 'Редактировать рекламную компанию для Avito'
+  delete: 'Удалить рекламную компанию для Avito'
 
 success:
-  new: 'Настройки услуг продвижения для Avito успешно добавлены'
-  edit: 'Настройки услуг продвижения для Avito успешно обновлены'
-  delete: 'Настройки услуг продвижения для Avito успешно удалены'
-  restore: 'Настройки услуг продвижения для Avito успешно восстановлены'
+  new: 'Рекламная компания для Avito успешно создана'
+  edit: 'Рекламная компания для Avito успешно изменена'
+  delete: 'Рекламная компания для Avito успешно удалена'
+  restore: 'Рекламная компания для Avito успешно восстановлена'
 
 danger:
-  new: '%s: Ошибка при добавлении услуг продвижения для Avito'
-  edit: '%s: Ошибка при обновлении услуг продвижения для Avito'
-  delete: '%s: Ошибка при обновлении услуг продвижения для Avito'
-  restore: '%s: Ошибка при восстановлении услуг продвижения для Avito'
+  new: '%s: Ошибка при добавлении рекламной компании для Avito'
+  edit: '%s: Ошибка при изменении рекламной компании для Avito'
+  delete: '%s: Ошибка при удалении рекламной компании для Avito'
+  restore: '%s: Ошибка при восстановлении рекламной компании для Avito'
+
 form:
   delete:
-    h4: 'Вы уверены, что желаете удалить услуг продвижения для Avito?'
+    h4: 'Вы уверены, что желаете удалить рекламную компанию для Avito?'
