--- a/Resources/translations/admin/avito-promotion.admin.ru.yaml
+++ b/Resources/translations/admin/avito-promotion.admin.ru.yaml
@@ -3,12 +3,14 @@ page:
   new: 'Добавить рекламную компанию для Avito'
   edit: 'Редактировать рекламную компанию для Avito'
   delete: 'Удалить рекламную компанию для Avito'
+  products: 'Список рекламируемых продуктов'
 
 breadcrumb:
   index: 'Настройки услуг продвижения для Avito'
   new: 'Добавить рекламную компанию для Avito'
   edit: 'Редактировать рекламную компанию для Avito'
   delete: 'Удалить рекламную компанию для Avito'
+  products: 'Список рекламируемых продуктов'
 
 success:
   new: 'Рекламная компания для Avito успешно создана'
